k8s/infra/network/gateway/gateway-class.yaml
# Cilium already installed the GatewayClass resource by default. But let's make it explicit.
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
