k8s/infra/network/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.65.140
  listeners:
    - protocol: HTTP
      port: 80
      name: http-gateway
      hostname: "*.k8s.ghiot.be"
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTP
      port: 80
      name: http-domain-gateway
      hostname: k8s.ghiot.be
      allowedRoutes:
        namespaces:
          from: All
